--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <ul>
         <li>Playing cricket🏏((justloveit;)).</li>
         <li>Reading self growth book📚.</li>
-        <li>Motor cycling</li>
+        <li>Motor cycling🏍️</li>
     </ul>
     <hr>
     <h2 style="background-color:rgb(240, 240, 240);"><strong><ins>Personal Information:</ins></strong></h2>
